# alertivo

./: .gitignore  README.md  pyproject.toml  system.json
config/: alerts.env.ps1.example  distill-profiles.example.yaml  http-sources.example.yaml  monitor-config.example.json  monitor.example.yaml  monitor.yaml  user-profile.example.json
docs/: 30min-setup-checklist.md  distill-checklist.md  shop-matrix.md  status-dashboard.html  windows-live-setup.md
scripts/: alertivo_exe_entry.py  build_exe.ps1  first_run_setup.ps1  open_distill_targets.ps1  register_tasks.ps1  send_test_webhook.ps1  send_test_webhook.py  setup_ready.ps1  start_alertivo.ps1  start_monitor.ps1  stop_alertivo.ps1  validate_setup.py
src/gpu_alerts/: __init__.py  autostart.py  config.py  control_center.py  control_center_template.html  desktop_app.py  engine.py  env_loader.py  main.py  matcher.py  migration.py  models.py  notifiers.py  orchestrator.py  parsing.py  product_lookup.py  profile.py  storage.py  tray_state.py  webhook.py
src/gpu_alerts/collectors/: __init__.py  base.py  command.py  http.py  parser.py
tests/: helpers.py  test_autostart.py  test_config_runtime.py  test_control_center_routes.py  test_engine.py  test_matcher.py  test_migration.py  test_notifiers.py  test_orchestrator.py  test_parser.py  test_parsing.py  test_product_lookup.py  test_tray_state.py
